# captcha-detection

./: main.py  pyproject.toml  requirements.txt
