[project]
name = "captcha-ocr-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "streamlit>=1.54.0",
]
